# note-management-api

./: .gitignore  Cargo.toml  Makefile  test_slugify
.sqlx/: query-04696d2b2203ecba715ce36979ea37b6b8a35c2b7bc3983a567720c850ed8e72.json  query-0de780527e5941a787c2c584bcbf39b965ff824ca4bb03f122bed00f52929d17.json  query-12e1ae13c2944f792b6a5228df1b24d6ec2b657050e47c997bd142b5720e2124.json  query-15f0a5be4b95223a0ec25509c1ba00db22f628673faf4cc10919bff3aaa04102.json  query-3eb4c31c7ebdce9422c2addd7dbdecc3e6d3725a87bf789f340742a60aa45fa4.json  query-6a5f47732bf07974e999781da5833aeb0f75e6c45319051ff77c99f6a17357a2.json  query-c43620083ab1f7c3dac7a06ec765c499e02b9dc83f85ddd2539be0dd2777db8a.json  query-c74def4bd051af73d7c01e7c372d8ddcf722d7df86a64101a7b4f44c97815984.json  query-ca462914e8f74de42687da6994fbebeecdbbd0b3c15c82235a043c04e93e7d37.json  query-dcfc23b5c082b1f4d706aab4633f10a827e86e2bd01bcebf4c9bc5d18e4f413d.json  query-f0e229732a90c490808ecb099e34691e1f9f4e2f7b57a7574233c4f472ee2555.json
migrations/: 20250924123519_create_users.up.sql  20250924123535_create_tasks.up.sql  20250924193721_add_user_role.up.sql  20250926215649_add_unique_slug_constraint.down.sql  20250926215649_add_unique_slug_constraint.up.sql
src/: lib.rs  main.rs
src/cache/: keys.rs  mod.rs  redis_cache.rs
src/config/: mod.rs  settings.rs
src/db/: mod.rs
src/domain/: error.rs  mod.rs  pagination.rs  task.rs  user.rs
src/extractors/: error_parser.rs  mod.rs  validated_json.rs
src/handlers/: api_response.rs  auth_handlers.rs  health_handlers.rs  mod.rs  task_handlers.rs  user_handlers.rs
(+19 files in other folders)
